Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-12647

requests to store() with cas may incorrectly be processed on Windows due to change in gethrtime() implementation

    XMLWordPrintable

Details

    • Untriaged
    • Yes
    • Mar 9 - Mar 27

    Description

      In high-throughput situations (client making multiple parallel requests) with very low network latency (i.e. running on localhost), Incr will return duplicate values on consecutive requests.

      See, attachments and NCBC-720: https://www.couchbase.com/issues/browse/NCBC-720

      Attachments

        1. Debug.zip
          796 kB
        2. dumpfile.pcap
          1.21 MB
        3. duplicate-increment.PNG
          duplicate-increment.PNG
          130 kB
        4. increment.zip
          4.33 MB

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              parag Parag Agarwal (Inactive)
              jmorris Jeff Morris
              Votes:
              0 Vote for this issue
              Watchers:
              17 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty